kubernetes/manifests/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: fastburger-api
  labels:
    fastburger.service: api
  name: api
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    fastburger.service: api
