kubernetes/manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: fastburger-api
  labels:
    fastburger.service: postgres
  name: postgres
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    fastburger.service: postgres
