kubernetes/manifests/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: fastburger-api-ingress
    namespace: fastburger-api
  spec:
    ingressClassName: nginx
    rules:
      - host: api.fastburger.com
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: api
                  port:
                    number: 8080
              path: /
